--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -49,7 +49,7 @@
         "             [\"please pay for the exam\", 1]          \n",
         "             ]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "import numpy as np\n",
         "def email_to_feature(dict, email):\n",
         "  result = []\n",
-        "  word_set = email[0].split()\n",
+        "  word_set = email.split()\n",
         "  for i in dict:\n",
         "    if i in word_set:\n",
         "      result.append(1)\n",
@@ -93,7 +93,7 @@
         "def emails_to_test_samples(dict, test_emails):\n",
         "  test_samples = []\n",
         "  for i in test_emails:\n",
-        "    elem = email_to_feature(dict,i)\n",
+        "    elem = email_to_feature(dict,i[0])\n",
         "    if i[-1] == 1:\n",
         "      elem.append(1)\n",
         "    else:\n",
@@ -101,7 +101,7 @@
         "    test_samples.append(elem)\n",
         "  return test_samples"
       ],
-      "execution_count": 40,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -150,11 +150,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Ry9w9OtOFBi",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1ad71aaf-206b-4347-9859-43008c87892a"
+        "id": "8Ry9w9OtOFBi"
       },
       "source": [
         "# You can implement the above algorithm in any way you want.\n",
@@ -162,7 +158,9 @@
         "# - Calculate the phis here\n",
         "# - Write functions for the probability P(x|y) depending on these phis\n",
         "# - Use this function in the function spam_percentage \n",
+        "\n",
         "def calculate_params(dict,test_emails):\n",
+        "  #maybe the inputs of calculate_params should be depending on x_is. \n",
         "  lst_Phi_i1 = []\n",
         "  lst_Phi_i0 = []\n",
         "  Phi_1 = 0\n",
@@ -186,20 +184,26 @@
         "  return lst_Phi_i1,lst_Phi_i0,Phi_1\n",
         "\n",
         "def spam_percentage(email):\n",
+        "  inp = email_to_feature(dictionary,email)\n",
+        "  print(inp)\n",
         "  (lst_Phi_i1,lst_Phi_i0,Phi_1) = calculate_params(dictionary,test_emails)\n",
-        "  #for loop to calculate the probability of whether new email is a spam or not.\n",
-        "  return NotImplementedError"
+        "  phi_i1_product = 1\n",
+        "  phi_i0_product = 1\n",
+        "\n",
+        "  for i in range(len(inp)):\n",
+        "    if inp[i] == 1:\n",
+        "      a = lst_Phi_i1[i]\n",
+        "      b = lst_Phi_i0[i]\n",
+        "    else:\n",
+        "      a = 1 - lst_Phi_i1[i]\n",
+        "      b = 1 - lst_Phi_i0[i]\n",
+        "    phi_i1_product *= a\n",
+        "    phi_i0_product *= b\n",
+        "  print(phi_i1_product)\n",
+        "  return (phi_i1_product*Phi_1)/((phi_i1_product*Phi_1)+(phi_i0_product*(1 - Phi_1)))\n"
       ],
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0.5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -213,14 +217,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zo_egC7AUYoq"
+        "id": "Zo_egC7AUYoq",
+        "outputId": "36fa16b7-d3bb-4b1d-faf8-26bfa150ad88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "email=\"the sun is shining. buy drugs now\"\n",
-        "print(SpamPercentage(email))"
+        "email=\"hello students, please learn for the exam\"#\"the sun is shining. buy drugs now\"\n",
+        "print(spam_percentage(email))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "2.3922130453058113e-07\n",
+            "0.4075824667893924\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -242,9 +260,42 @@
         "id": "1rvAqAkHz21D"
       },
       "source": [
-        "def create_dictionary(emails):\n",
+        "import re\n",
         "\n",
-        "  return NotImplementedError"
+        "def email_to_wordset(email):\n",
+        "  text = email[0]\n",
+        "  plane_text = re.sub(r'[^\\w]', ' ', text)\n",
+        "  word_set = plane_text.split()\n",
+        "  return word_set\n",
+        "\n",
+        "def create_dictionary(emails):\n",
+        "  my_dict = []\n",
+        "  for i in emails:\n",
+        "    word_set = email_to_wordset(i)\n",
+        "    for j in word_set:\n",
+        "      if j in my_dict:\n",
+        "        pass\n",
+        "      else:\n",
+        "        my_dict.append(j)\n",
+        "  return my_dict\n",
+        "\n",
+        "def update_dictionary(dictionary,word):\n",
+        "  my_dict = dictionary\n",
+        "  if word in dictionary:\n",
+        "    pass\n",
+        "  else:\n",
+        "    my_dict.append(word)\n"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iq2dbu_rnUrV"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
